--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "css-experiment",
+  "name": "copywriter portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bs": "browser-sync start --server --files . --index index.html",
-    "bscurve": "browser-sync start --server --files . --index curve-sections.html"
+    "bs": "browser-sync start --server --files . --index index.html"
   },
   "keywords": [],
   "author": "bprcode <bprcode@gmail.com>",
